# devskills

./: .gitignore  CHANGELOG.md  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json
.claude/: mcp.json
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
bundled/prompts/: skill-creator.md
bundled/skills_test/: .gitkeep
devskills/: __init__.py  cli.py  main.py
devskills/bundled_prompts/: mcp-builder.md  skill-creator.md
docs/: concepts.md  configuration.md  creating-skills.md  enterprise-context.md  how-it-works.md  index.md  reference.md  setup.md  template-setup.md
docs/getting-started/: installation.md  quick-start.md  what-is-skillkit.md
docs/guide/: creating-your-first-skill.md  remote-repositories.md  skill-repositories.md  using-references.md  using-scripts.md
docs/integrations/: custom-agents.md  github-copilot.md  overview.md
docs/plans/: 2026-01-16-remote-git-repos-implementation.md  2026-01-16-remote-git-repositories-design.md
docs/reference/: cli.md  mcp-tools.md  skill-format.md
references/: coding-guidelines.md
server/: __main__.py  main.py  skills.py
skills/skill-creator/: SKILL.md
src/: cli.ts  gitSource.ts  index.ts  promptManager.ts  readmeUpdater.ts  schemas.ts  skillManager.ts  validation.ts  version.ts
src/templates/: repoTemplate.ts  skillTemplate.ts
tests/: cli.test.ts  index.test.ts  promptManager.test.ts  schemas.test.ts  skillManager.test.ts  validation.test.ts
tests/unit/: cli.test.ts  (+6 more)
website/: docusaurus.config.ts  pnpm-lock.yaml  sidebars.ts
(+20 files in other folders)
