[project]
name = "devskills"
version = "0.1.0"
description = "MCP server exposing reusable skills for AI coding agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
